# NeoZZZ

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
core/: game_state.cpp  game_state.hpp  move.cpp  move.hpp  tetris_board.cpp  tetris_board.hpp  tetris_piece.cpp  tetris_piece.hpp
rotation_systems/: rotation_system.hpp  rule_factory.cpp  rule_factory.hpp  srs.cpp  srs.hpp
rotatoin_systems/: rotation_system.hpp
search/: path_search.cpp  path_search.hpp  search_algorithm.hpp  search_factory.cpp  search_factory.hpp  tspin_search.hpp
